clicking image goes to top of page, fades info in

--- a/pokedex.html
+++ b/pokedex.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div class="container-fluid">
-            <a name="top-of-age"></a>
+            <a name="top-of-page"></a>
             <div class="pokedex col-md-9">
             </div>
 
