--- a/pokedex.html
+++ b/pokedex.html
@@ -12,6 +12,10 @@
             body {
                 margin-top: 20px;
             }
+            #info-box{
+                position: fixed;
+                width: 20%;
+            }
         </style>
     </head>
     <body>
@@ -21,7 +25,7 @@
             </div>
 
             <div class="pokemon col-md-3">
-                <div class="pokemon-info well well-lg">
+                <div class="pokemon-info well well-lg" id="info-box">
                 </div>
             </div>
 
